--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     image: node-app
     environment:
-      - MONGODB_URL=mongodb://mongodb:27017/node-boilerplate
+      - MONGODB_URL=mongodb://mongodb:27017/profile-db
     ports:
       - '5000:3000'
     depends_on:
@@ -29,4 +29,5 @@ volumes:
 
 networks:
   node-network:
+    name: node-network
     driver: bridge
